# Aether

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.service  docker-compose.yml
docs/adr/: ADR-001-microservices.md  ADR-002-redis-streams.md  ADR-003-llm-abstraction.md  ADR-004-agent-registry.md  ADR-005-memory-migrations.md  ADR-006-sse-streaming.md  ADR-007-jwt-auth.md  ADR-008-rate-limiting.md  ADR-009-hybrid-search.md  ADR-010-evaluation-service.md  ADR-011-prompt-versioning.md  ADR-012-human-approval-workflows.md  ADR-013-cost-tracking.md  ADR-014-ecosystem-adapter-layer.md  ADR-015-atlas-queue-integration.md  ADR-016-argus-integration.md  ADR-017-cloudforge-deployment-contract.md
docs/architecture/: overview.md
docs/demos/: README.md
docs/deployment/: cloudforge-integration.md
monitoring/: otel-collector-config.yml
monitoring/grafana/dashboards/: aether-phase3.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
scripts/demos/: 01-orchestration.ps1  01-orchestration.sh  02-async-workflow.ps1  02-async-workflow.sh  03-knowledge-acquisition.ps1  03-knowledge-acquisition.sh  04-observability.ps1  04-observability.sh  run-all.ps1  run-all.sh
services/agents/: _shared_agent_template.py
services/agents/code/: pyproject.toml
services/agents/code/src/aether_agent_code/: main.py
services/agents/critic/: pyproject.toml
services/agents/critic/src/aether_agent_critic/: main.py
services/agents/data-analysis/: pyproject.toml
services/agents/data-analysis/src/aether_agent_data_analysis/: main.py
services/agents/fact-checker/: pyproject.toml
services/agents/fact-checker/src/aether_agent_fact_checker/: main.py
services/agents/memory-manager/: pyproject.toml
services/agents/memory-manager/src/aether_agent_memory_manager/: main.py
services/agents/planner/: pyproject.toml
services/agents/planner/src/aether_agent_planner/: main.py
services/agents/research/: pyproject.toml
services/agents/research/src/aether_agent_research/: main.py
services/agents/summarizer/: pyproject.toml
services/agents/summarizer/src/aether_agent_summarizer/: main.py
services/agents/tool-executor/: pyproject.toml
services/agents/tool-executor/src/aether_agent_tool_executor/: main.py
services/api-gateway/: pyproject.toml
services/api-gateway/src/aether_gateway/: main.py
services/evaluation-service/: pyproject.toml
services/evaluation-service/src/aether_evaluation/: main.py
services/evaluation-service/src/aether_evaluation/infrastructure/: models.py  repository.py
services/evaluation-service/tests/: test_scorer.py
services/knowledge-service/: pyproject.toml
services/knowledge-service/src/aether_knowledge/: main.py
services/knowledge-service/src/aether_knowledge/infrastructure/: models.py  repository.py
services/memory-service/: pyproject.toml
services/memory-service/src/aether_memory/: config.py  main.py
services/memory-service/src/aether_memory/infrastructure/database/: models.py  repositories.py
services/orchestrator/: pyproject.toml
services/orchestrator/src/aether_orchestrator/: main.py
services/orchestrator/src/aether_orchestrator/application/: orchestration.py
services/orchestrator/tests/: test_approval.py
services/prompt-registry/: pyproject.toml
services/prompt-registry/src/aether_prompt_registry/: main.py
services/prompt-registry/src/aether_prompt_registry/infrastructure/: models.py  repository.py
services/prompt-registry/tests/: test_render.py
services/response-builder/: pyproject.toml
services/response-builder/src/aether_response_builder/: main.py
services/response-builder/tests/: test_builder.py
tests/integration/: test_workflow.py
tests/performance/: locustfile.py
