[project]
name = "aether-evaluation-service"
version = "0.3.0"
requires-python = ">=3.13"
dependencies = [
    "aether-common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
]
[tool.uv.sources]
aether-common = { workspace = true }
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/aether_evaluation"]
[project.scripts]
evaluation-service = "aether_evaluation.main:main"
