[project]
name = "aether-orchestrator"
version = "0.3.0"
requires-python = ">=3.13"
dependencies = [
    "aether-common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
]
[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
[tool.uv.sources]
aether-common = { workspace = true }
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/aether_orchestrator"]
[project.scripts]
orchestrator = "aether_orchestrator.main:main"
