[project]
name = "aether-response-builder"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["aether-common", "fastapi>=0.115.0", "uvicorn[standard]>=0.34.0"]
[tool.uv.sources]
aether-common = { workspace = true }
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/aether_response_builder"]
[project.scripts]
response-builder = "aether_response_builder.main:main"
