[project]
name = "aether-agent-critic"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["aether-common", "fastapi>=0.115.0", "uvicorn[standard]>=0.34.0", "openai>=1.59.0", "anthropic>=0.42.0", "redis>=5.2.0"]
[tool.uv.sources]
aether-common = { workspace = true }
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/aether_agent_critic"]
[project.scripts]
agent-critic = "aether_agent_critic.main:main"
