[project]
name = "aether-agent-memory-manager"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["aether-common", "fastapi>=0.115.0", "uvicorn[standard]>=0.34.0", "redis>=5.2.0"]
[tool.uv.sources]
aether-common = { workspace = true }
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/aether_agent_memory_manager"]
